// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-css tool compiles package CSS bundle 1`] = `
"/*!
 * test-css v1.2.3 - https://ui.wearegenki.com
 * Copyright 2020 We Are Genki
 * Apache 2.0 license - https://github.com/WeAreGenki/minna-ui/blob/master/LICENCE
 */body{margin:0}.link{background:#969696}.link:focus,.link:hover{background:#000}.link:active{background:#00960a}
/*# sourceMappingURL=index.css.map */"
`;

exports[`build-css tool compiles package CSS bundle with imports 1`] = `
"/*!
 * test-css v1.2.3 - https://ui.wearegenki.com
 * Copyright 2020 We Are Genki
 * Apache 2.0 license - https://github.com/WeAreGenki/minna-ui/blob/master/LICENCE
 */body{margin:0}#target{color:red}#target .focus,#target:focus{background:#000}.wrapper+#target{background:#212121}
/*# sourceMappingURL=index.css.map */"
`;

exports[`build-css tool generates a source map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../../jest-config/fixtures/simple.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;;;;AAKA,KACE,OAAA,EAGF,MACE,WAAA,QAEA,YAAA,YAEE,WAAA,KAGF,aACE,WAAA\\"}"`;
